# AktienAnalyse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  crontab  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt
data/: dax_mdax_fallback.csv
src/: __init__.py  config.py  data_fetcher.py  fundamentals.py  healthcheck.py  logging_setup.py  mailer.py  main.py  reporting.py  scoring.py  universe.py
tests/: conftest.py  test_config.py  test_data_fetcher.py  test_fundamentals.py  test_healthcheck.py  test_reporting.py  test_scoring.py  test_universe.py
